feat: camera working and other adjustments

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="game-container">
-      <canvas id="canvas" width="800" height="800"></canvas>
+      <canvas id="canvas"></canvas>
       <div class="form-container" id="form-container">
         <form class="form" id="enter-form">
           <h1>Welcome!</h1>
