feat: refactored client structure and abstracted/decoupled new controllers

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -42,6 +42,12 @@
       </div>
     </div>
   </div>
+  <script src="classes/InputController.js" defer></script>
+  <script src="classes/StateController.js" defer></script>
+  <script src="classes/UIController.js" defer></script>
+  <script src="classes/ScreenController.js" defer></script>
+  <script src="classes/Map.js" defer></script>
+  <script src="classes/Camera.js" defer></script>
   <script src="app.js" defer></script>
 </body>
 
