--- a/src/client/index.html
+++ b/src/client/index.html
@@ -48,7 +48,7 @@
   <script src="classes/ScreenController.js" defer></script>
   <script src="classes/Map.js" defer></script>
   <script src="classes/Camera.js" defer></script>
-  <script src="classes/Game.js" defer></script>
+  <script src="classes/Gamix.js" defer></script>
   <script src="index.js" defer></script>
 </body>
 
