feat: big new version introducing new file arc and new implementations

--- a/src/core/client/index.html
+++ b/src/core/client/index.html
@@ -48,7 +48,9 @@
   <script src="classes/ScreenController.js" defer></script>
   <script src="classes/Map.js" defer></script>
   <script src="classes/Camera.js" defer></script>
-  <script src="classes/Gamix.js" defer></script>
+  <script src="classes/GameObject.js" defer></script>
+  <script src="classes/GameObjects.js" defer></script>
+  <script src="classes/Game.js" defer></script>
   <script src="index.js" defer></script>
 </body>
 
